[package]
name = "yarrp-graph-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
bincode = "1.3.3"
csv = "1.1.6"
log = "0.4.14"
env_logger = "0.8"
pbr = "1.0.4" # Terminal progress bar
libmath = "0.2.1"
rand = "0.8.5"
lazy-init = "0.5.0"